--- a/frontend/src/app/modules/inventory/inventory-stock/inventory-stock.component.html
+++ b/frontend/src/app/modules/inventory/inventory-stock/inventory-stock.component.html
@@ -54,12 +54,6 @@
             <div class="table-container" *ngIf="!isLoading">
                 <table mat-table [dataSource]="dataSource" matSort>
 
-                    <!-- ID Column -->
-                    <ng-container matColumnDef="id_inventario">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                        <td mat-cell *matCellDef="let item"> {{ item.id_inventario }} </td>
-                    </ng-container>
-
                     <!-- Producto Column -->
                     <ng-container matColumnDef="producto">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Producto </th>
@@ -98,12 +92,12 @@
                         <td mat-cell *matCellDef="let item">
                             <div class="action-buttons">
                                 <button mat-icon-button color="primary" matTooltip="Ajustar Stock"
-                                    (click)="openAdjustStockDialog(item)">
+                                    *ngIf="isAdmin || isCajero" (click)="openAdjustStockDialog(item)">
                                     <mat-icon>edit</mat-icon>
                                 </button>
                             </div>
                         </td>
-                    </ng-container>
+                    </ng-container> 
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
