--- a/frontend/src/app/modules/orders/order-detail/order-detail.component.html
+++ b/frontend/src/app/modules/orders/order-detail/order-detail.component.html
@@ -10,6 +10,13 @@
             <button mat-button color="primary" (click)="goBack()">
                 <mat-icon>arrow_back</mat-icon> Volver
             </button>
+
+            <button mat-raised-button color="primary" *ngIf="order && order.estado !== 'pagado'"
+                (click)="addProducts()">
+                <mat-icon>add_shopping_cart</mat-icon> Agregar Productos
+            </button>
+
+
             <button mat-raised-button color="accent"
                 *ngIf="order && order.estado !== 'pagado' && (authService.isAdmin() || authService.isCajero())"
                 (click)="processPayment()">
